<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:theme="@style/CustomTheme">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/linear_l_h"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="#4DB6AC"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="80dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/savings"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/savings_value_while_adding_expense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@android:color/white"
                android:textSize="24sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/user_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:fontFamily="sans-serif"
            android:padding="4dp"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <EditText
        android:id="@+id/expense_amount_per_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_l_h"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="4dp"
        android:hint="@string/expense_amount_hint"
        android:inputType="number"
        app:backgroundTint="#64FFDA" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/l1"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/t2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/payment_method_hint"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/payment_method_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:backgroundTint="#1DE9B6"></Spinner>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/l1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/expense_amount_per_time"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/t1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/expense_type"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/expense_type_temp_image"
            android:contentDescription="@string/expense_type_image"
            android:layout_width="16sp"
            android:layout_height="16sp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>

        <TextView
            android:id="@+id/expense_type_temp_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:textColor="#1DE9B6"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/dialog_to_doalog"
            android:contentDescription="@string/start_expense_type_dialog"
            android:layout_width="24sp"
            android:layout_height="24sp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:backgroundTint="#1DE9B6"
            android:src="@drawable/ic_open_in_new_black_24dp"
            app:tint="#1DE9B6" />

    </LinearLayout>

    <Button
        android:id="@+id/done_updating_expense_per_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="24dp"
        android:background="@drawable/circularborder"
        android:padding="8dp"
        android:text="@string/update_done"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:backgroundTint="#1DE9B6" />
</RelativeLayout>

</ScrollView>