<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="@dimen/widget_margin"

    >

    <Button
        android:id="@+id/add_expense_widget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:background="@drawable/circularborder"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/add_expense"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:id="@+id/tempLinear"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#4DB6AC"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:fontFamily="sans-serif"
                android:text="@string/total_salary"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/salary_value_widget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif-smallcaps"
                android:textColor="@android:color/white" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:fontFamily="sans-serif"
                android:text="@string/total_expense_widget"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/expene_value_widget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif-smallcaps"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:fontFamily="sans-serif"
                android:text="@string/total_savings_widget"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/savings_value_widget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/tempRelative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recent_Text"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="8dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/expense_type_image"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:contentDescription="@string/expense_type_image"
            android:src="@drawable/icons8_movie_projector_48" />

        <TextView
            android:id="@+id/expense_type_text_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/expense_type_image"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/expense_type_image"
            android:layout_toRightOf="@+id/expense_type_image"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/expense_amount_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignBottom="@+id/expense_type_image"
            android:layout_below="@+id/expense_type_text_field"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/expense_type_image"
            android:layout_toRightOf="@+id/expense_type_image"
            android:fontFamily="sans-serif-condensed" />

        <TextView
            android:id="@+id/payment_method_per_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:fontFamily="sans-serif-condensed"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/payment_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/payment_method_per_time"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/recent_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tempLinear"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/recent_expense"
        android:textColor="#212121" />

    <TextView
        android:id="@+id/noExpenseWidget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recent_Text"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/no_expense_added"
        android:visibility="gone" />


</RelativeLayout>